# Meteorological-Data-Management-Center

./: README.md
project/: CMakeLists.txt
project/idc1/: CMakeLists.txt
project/idc1/c/: .book1.cpp.swp  .crtsurfdata1.cpp.swp  book  book.cpp  book1.cpp  crtsurfdata.cpp  crtsurfdata1.cpp  crtsurfdata2.cpp  crtsurfdata3.cpp  crtsurfdata4.cpp  crtsurfdata5.cpp  idcapp.cpp  idcapp.h  killall.sh  makefile  obtcodetodb  obtcodetodb.cpp  obtmindtodb  obtmindtodb.cpp  start.sh
project/idc1/ini/: stcode.ini
project/pthread/: Test01  Test01.cpp  book1  book10  book17  book18  book18.cpp  book3  book6  book9  makefile
project/public/: .ftpclient.cpp.swp  _public.cpp  ftpclient  ftpclient.cpp
project/public/db/mysql/: _mysql.cpp  _mysql.h  createtable  createtable.cpp  filetoblob  filetoblob.cpp  inserttable  inserttable.cpp  inserttable╕▒▒╛.cpp  liburing1_0.7-3_amd64.deb  makefile  makefile╚л  selecttable  selecttable.cpp  updatetable  updatetable.cpp
project/public/socket/: demo20.cpp  tcpselect.cpp
project/tools/c/: dminingmysql4.cpp  gzipfiles  gzipfiles.cpp  syncincrement_oracle.cpp  webserver2.cpp  webserver4.cpp  xmltodb2.cpp  xmltodb3.cpp
project/tools1/c/: .deletefiles.cpp.swp  .ftpgetfiles.cpp.swp  .makefile.swp  .procctl.cpp.swp  Test01  checkproc  checkproc.cpp  deletefiles  deletefiles.cpp  deletetable  deletetable.cpp  deletetable_oracle.cpp  dminingmysql  dminingmysql.cpp  dminingmysql1.cpp  dminingmysql2.cpp  dminingmysql4.cpp  dminingmysql5.cpp  dminingoracle  dminingoracle.cpp  execsql  execsql.cpp  fileserver  fileserver.cpp  fileserver1.cpp  fileserver2.cpp  fileserver3.cpp  fileserver4.cpp  fileserver5.cpp  ftpgetfiles.cpp  ftpgetfiles1.cpp  ftpgetfiles2.cpp  ftpgetfiles3.cpp  ftpgetfiles4.cpp  ftpputfiles  ftpputfiles.cpp  gzipfiles  gzipfiles.cpp  makefile  migratetable.cpp  (+21 more)
