cmake_minimum_required(VERSION 3.21)
project(project)

set(CMAKE_CXX_STANDARD 14)

include_directories(idc/c)
include_directories(public)
include_directories(public/db/mysql)
include_directories(public/db/oracle)
include_directories(public/db/postgresql)
include_directories(tools/c)

add_executable(project
        idc/c/crtsurfdata.cpp
        idc/c/crtsurfdata1.cpp
        idc/c/crtsurfdata2.cpp
        idc/c/crtsurfdata3.cpp
        idc/c/crtsurfdata4.cpp
        idc/c/crtsurfdata5.cpp
        idc/c/idcapp.cpp
        idc/c/idcapp.h
        idc/c/obtcodetodb.cpp
        idc/c/obtmindtodb.cpp
        idc/c/obtmindtodb1.cpp
        idc/c/obtmindtodb2.cpp
        idc/c/obtmindtodb3.cpp
        idc/c/obtmindtodb4.cpp
        idc/c/obtmindtodb5.cpp
        idc1/c/book.cpp
        idc1/c/crtsurfdata1.cpp
        idc1/c/crtsurfdata2.cpp
        idc1/c/crtsurfdata3.cpp
        idc1/c/crtsurfdata4.cpp
        idc1/c/crtsurfdata5.cpp
        pthread/book1.cpp
        pthread/book10.cpp
        pthread/book11.cpp
        pthread/book12.cpp
        pthread/book13.cpp
        pthread/book14.cpp
        pthread/book15.cpp
        pthread/book16.cpp
        pthread/book17.cpp
        pthread/book18.cpp
        pthread/book19.cpp
        pthread/book2.cpp
        pthread/book3.cpp
        pthread/book4.cpp
        pthread/book5.cpp
        pthread/book6.cpp
        pthread/book7.cpp
        pthread/book8.cpp
        pthread/book9.cpp
        public/db/mysql/_mysql.cpp
        public/db/mysql/_mysql.h
        public/db/mysql/blobtofile.cpp
        public/db/mysql/createtable.cpp
        public/db/mysql/deletetable.cpp
        public/db/mysql/filetoblob.cpp
        public/db/mysql/inserttable.cpp
        public/db/mysql/selecttable.cpp
        public/db/mysql/updatetable.cpp
        public/db/oracle/_ooci.cpp
        public/db/oracle/_ooci.h
        public/db/oracle/blobtofile.cpp
        public/db/oracle/clobtofile.cpp
        public/db/oracle/counttable.cpp
        public/db/oracle/createtable.cpp
        public/db/oracle/deletetable.cpp
        public/db/oracle/execplsql.cpp
        public/db/oracle/filetoblob.cpp
        public/db/oracle/filetoclob.cpp
        public/db/oracle/inserttable.cpp
        public/db/oracle/selecttable.cpp
        public/db/oracle/updatetable.cpp
        public/db/postgresql/_postgresql.cpp
        public/db/postgresql/_postgresql.h
        public/db/postgresql/counttable.cpp
        public/db/postgresql/createtable.cpp
        public/db/postgresql/deletetable.cpp
        public/db/postgresql/inserttable.cpp
        public/db/postgresql/selecttable.cpp
        public/db/postgresql/updatetable.cpp
        public/demo/demo1.cpp
        public/demo/demo10.cpp
        public/demo/demo12.cpp
        public/demo/demo16.cpp
        public/demo/demo18.cpp
        public/demo/demo2.cpp
        public/demo/demo20.cpp
        public/demo/demo21.cpp
        public/demo/demo22.cpp
        public/demo/demo24.cpp
        public/demo/demo26.cpp
        public/demo/demo28.cpp
        public/demo/demo29.cpp
        public/demo/demo30.cpp
        public/demo/demo32.cpp
        public/demo/demo34.cpp
        public/demo/demo36.cpp
        public/demo/demo37.cpp
        public/demo/demo39.cpp
        public/demo/demo4.cpp
        public/demo/demo40.cpp
        public/demo/demo42.cpp
        public/demo/demo43.cpp
        public/demo/demo45.cpp
        public/demo/demo47.cpp
        public/demo/demo48.cpp
        public/demo/demo5.cpp
        public/demo/demo50.cpp
        public/demo/demo51.cpp
        public/demo/demo52.cpp
        public/demo/demo7.cpp
        public/demo/demo8.cpp
        public/socket/client.cpp
        public/socket/demo01.cpp
        public/socket/demo02.cpp
        public/socket/demo03.cpp
        public/socket/demo04.cpp
        public/socket/demo05.cpp
        public/socket/demo06.cpp
        public/socket/demo07.cpp
        public/socket/demo08.cpp
        public/socket/demo10.cpp
        public/socket/demo11.cpp
        public/socket/demo12.cpp
        public/socket/demo13.cpp
        public/socket/demo14.cpp
        public/socket/demo20.cpp
        public/socket/demo26.cpp
        public/socket/demo27.cpp
        public/socket/demo28.cpp
        public/socket/demo31.cpp
        public/socket/demo32.cpp
        public/socket/demo33.cpp
        public/socket/tcpepoll.cpp
        public/socket/tcppoll.cpp
        public/socket/tcpselect.cpp
        public/socket/tmp.cpp
        public/_cmpublic.h
        public/_ftp.cpp
        public/_ftp.h
        public/_public.cpp
        public/_public.h
        public/ftplib.c
        public/ftplib.h
        tools/c/_tools.cpp
        tools/c/_tools.h
        tools/c/_tools_oracle.cpp
        tools/c/_tools_oracle.h
        tools/c/checkproc.cpp
        tools/c/deletefiles.cpp
        tools/c/deletetable.cpp
        tools/c/deletetable_oracle.cpp
        tools/c/dminingmysql.cpp
        tools/c/dminingmysql1.cpp
        tools/c/dminingmysql2.cpp
        tools/c/dminingmysql3.cpp
        tools/c/dminingmysql4.cpp
        tools/c/dminingmysql5.cpp
        tools/c/dminingmysql6.cpp
        tools/c/dminingoracle.cpp
        tools/c/execsql.cpp
        tools/c/fileserver.cpp
        tools/c/fileserver1.cpp
        tools/c/fileserver2.cpp
        tools/c/fileserver3.cpp
        tools/c/fileserver4.cpp
        tools/c/fileserver5.cpp
        tools/c/ftpgetfiles.cpp
        tools/c/ftpgetfiles1.cpp
        tools/c/ftpgetfiles2.cpp
        tools/c/ftpgetfiles3.cpp
        tools/c/ftpgetfiles4.cpp
        tools/c/ftpputfiles.cpp
        tools/c/gzipfiles.cpp
        tools/c/inetd.cpp
        tools/c/migratetable.cpp
        tools/c/migratetable_oracle.cpp
        tools/c/procctl.cpp
        tools/c/rinetd.cpp
        tools/c/rinetdin.cpp
        tools/c/syncincrement.cpp
        tools/c/syncincrement_oracle.cpp
        tools/c/syncincrementex.cpp
        tools/c/syncincrementex_oracle.cpp
        tools/c/syncupdate.cpp
        tools/c/syncupdate1.cpp
        tools/c/syncupdate2.cpp
        tools/c/syncupdate_oracle.cpp
        tools/c/tcpgetfiles.cpp
        tools/c/tcpputfiles.cpp
        tools/c/tcpputfiles1.cpp
        tools/c/tcpputfiles2.cpp
        tools/c/tcpputfiles3.cpp
        tools/c/tcpputfiles4.cpp
        tools/c/tcpputfiles5.cpp
        tools/c/webserver.cpp
        tools/c/webserver1.cpp
        tools/c/webserver2.cpp
        tools/c/webserver3.cpp
        tools/c/webserver4.cpp
        tools/c/webserver5.cpp
        tools/c/webserver_.cpp
        tools/c/xmltodb.cpp
        tools/c/xmltodb1.cpp
        tools/c/xmltodb2.cpp
        tools/c/xmltodb3.cpp
        tools/c/xmltodb4.cpp
        tools/c/xmltodb5.cpp
        tools/c/xmltodb6.cpp
        tools/c/xmltodb_oracle.cpp)
